syntax = "proto3";
package sec_srv_svc;

import "srv_message_type.proto";

message SrvMsgIndexOpen {
	MessageType message_type = 1;
	string index_name = 2;
}

message SrvMsgIndexOpenResponse {
	int32 has_succeeded = 1;

	oneof RequestResponse {
		int32 index_id = 2;
		int32 error_code = 3;
	}
}
